syntax = "proto3";
package usermanagement.v1;
option go_package = "user-management/internal/proto";

service UserService {
    rpc CreateUserService(CreateUserServiceRequest) returns (CreateUserServiceResponse);
    rpc GetAllUsersService(GetAllUsersServiceRequest) returns (GetAllUsersServiceResponse);
    rpc GetInfoService(GetInfoServiceRequest) returns (GetInfoServiceResponse);
    rpc UpdateByIdService(UpdateByIdServiceRequest) returns (UpdateByIdServiceResponse);
    rpc DeleteByIdService(DeleteByIdServiceRequest) returns (DeleteByIdServiceResponse);
}

service AuthService {
    rpc LoginService(LoginServiceRequest) returns (LoginServiceResponse);
    rpc UpdatePasswordService(UpdatePasswordServiceRequest) returns (UpdatePasswordServiceResponse);
}

message CreateUserServiceRequest {
    string username = 2;
    string password = 3;
    string role = 4;
    string city = 5;
}

message CreateUserServiceResponse {
    bool success = 1;
}

message LoginServiceRequest {
    string username = 1;
    string password = 2;
}

message LoginServiceResponse {
    string jwt_token = 1;
}

message User {
    string id = 1;
    string username = 2;
    string time_of_creation = 3;
    string role = 4;
    string city = 5;
    int32 version = 6;
}

message GetAllUsersServiceRequest {}

message GetAllUsersServiceResponse {
    repeated User users = 1;
}

message GetInfoServiceRequest {}

message GetInfoServiceResponse {
    User user = 1;
}

message UpdateByIdServiceRequest {
    string id = 1;
    string username = 2;
    string role = 3;
    string city = 4;
    int32 version = 5;
}

message UpdateByIdServiceResponse {
    bool success = 1;
}

message DeleteByIdServiceRequest {
    string id = 1;
}

message DeleteByIdServiceResponse {
    bool success = 1;
}

message UpdatePasswordServiceRequest {
    string username = 1;
    string old_pass = 2;
    string new_pass = 3;
}

message UpdatePasswordServiceResponse {
    bool success = 1;
}
